# py-governance-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  governance-engine-proxy.spec  grc-proxy.spec  install  install.ps1  install.sh  mkdocs.yml  pyproject.toml  token_log.json  z-grc-proxy.spec
.github/workflows/: publish.yml  release.yml
docs/: how-to-use.md  index.md
docs/stylesheets/: extra.css  theme.css
examples/: bedrock_pydantic_ai.py  bedrock_strands_ai.py  bedrock_vanilla_usage.py  cli_interceptor.py  cost.py
grc/: __init__.py  auth.py  providers.py  proxy.main.py
grc/client/: api_client.py
grc/core/: __init__.py  lazy_patcher.py
grc/interceptors/: __init__.py  base_interceptor.py
grc/interceptors/bedrock/: __init__.py
grc/observability/: __init__.py  auto_instrumentation.py  base_telemetry.py  logs.py  metrics.py  traces.py
grc/policy/: Quota.py  post_checker.py
grc/proxy/: __init__.py
grc/utils/: __init__.py  exceptions.py
zgrc/: __init__.py  auth.py  context.py  proxy.main.py
zgrc/client/: api_client.py
zgrc/core/: lazy_patcher.py  manager.py  registry.py  scanner.py
zgrc/interceptors/: base_interceptor.py  base_response_handler.py  models.py
zgrc/interceptors/bedrock/: __init__.py  interceptor.py  response_handlers.py
zgrc/observability/: __init__.py  auto_instrumentation.py  base_telemetry.py  logs.py  metrics.py  traces.py
zgrc/policy/: Quota.py  __init__.py  post_checker.py  pre_checker.py
zgrc/proxy/: __init__.py  handlers.py  script.py
zgrc/utils/: cost_calculator.py  exceptions.py  model_resolver.py
