[project]
name = "z-grc"
version = "0.0.16"
description = "Governance Engine by zeb labs"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
authors = [
    { name = "Samrat Damodaran", email = "samrat.damodaran@zeb.co" },
    { name = "Shriyokesh Thangavel", email = "shriyokesh.thangavel@zeb.co" },
    { name = "Sid V", email =    "sid@zeb.co" },
    { name = "Madhavsrikrishna Sriram", email = "madhavsrikrishna.sriram@zeb.co" },
    { name = "Noor Shekumohamed", email = "noor.shekumohamed@zeb.co" },
    { name = "Arunachalam Gunasekaran", email = "Arun.Gunasekaran@zeb.co" }
]
maintainers = [
    { name = "Samrat Damodaran", email = "samrat.damodaran@zeb.co" },
    { name = "Shriyokesh Thangavel", email = "shriyokesh.thangavel@zeb.co" },
    { name = "Sid V", email = "sid@zeb.co" },
    { name = "Madhavsrikrishna Sriram", email = "madhavsrikrishna.sriram@zeb.co" },
    { name = "Noor Shekumohamed", email = "noor.shekumohamed@zeb.co" },
    { name = "Arunachalam Gunasekaran", email = "Arun.Gunasekaran@zeb.co" },]
keywords = ["governance", "llm", "quota", "policy", "telemetry", "observability"]
dependencies = [
    "httpx>=0.28.1",
    "mitmproxy>=12.2.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-instrumentation>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-instrumentation-threading>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
]

[project.urls]
Homepage = "https://github.com/zeb-ai/z-grc"
Repository = "https://github.com/zeb-ai/z-grc"


# DEV dependency only for running example codes and precommit
[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "boto3>=1.42.70",
    "pydantic-ai>=1.70.0",
    "strands-agents>=1.30.0",
    "strands-agents-tools>=0.2.22",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.19.0",
    "build>=1.4.3",
    "twine>=6.2.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-git-committers-plugin-2>=2.4.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-awesome-pages-plugin>=2.10.0",
    "mkdocs-include-markdown-plugin>=7.1.0",
    "mkdocs-macros-plugin>=1.3.0",
    "pymdown-extensions>=10.12.0",
    "pygments>=2.19.0",
    "pillow>=11.0.0",
    "cairosvg>=2.7.0",
]

# install when instrumentation needed for whole project/application
auto-instrument = [
    "opentelemetry-instrumentation-fastapi>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-flask>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-starlette>=0.49b0,<0.61b0",

    "opentelemetry-instrumentation-requests>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-urllib3>=0.49b0,<0.61b0",

    "opentelemetry-instrumentation-psycopg2>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-psycopg>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-redis>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-pymongo>=0.49b0,<0.61b0",

    "opentelemetry-instrumentation-botocore>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-boto3sqs>=0.49b0,<0.61b0",

    "opentelemetry-instrumentation-celery>=0.49b0,<0.61b0",

    "opentelemetry-instrumentation-logging>=0.49b0,<0.61b0",
    "opentelemetry-instrumentation-system-metrics>=0.49b0,<0.61b0",
]

[project.scripts]
grc-proxy = "grc.proxy.main:main"
